--- a/Simple Grabber/App.config
+++ b/Simple Grabber/App.config
@@ -26,4 +26,8 @@
       <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
     </DbProviderFactories>
   </system.data>
+
+  <appSettings>
+    <add key="USB" value="USB"/>
+  </appSettings>
 </configuration>
