Changes to how files are managed
Realised that saving to a usb isn't the best idea when attempting to recover files. Files now save to a specified location (this is set in app.config)

--- a/Simple Grabber/App.config
+++ b/Simple Grabber/App.config
@@ -28,6 +28,6 @@
   </system.data>
 
   <appSettings>
-    <add key="USB" value="USB"/>
+    <add key="path" value="C:\Data"/>
   </appSettings>
 </configuration>
