Added wireless password recovery
Wireless password recovery should be working flawlessly

Small updates to some syntax in other files

--- a/Simple Recovery/Simple Recovery.csproj
+++ b/Simple Recovery/Simple Recovery.csproj
@@ -13,6 +13,7 @@
     <TargetFrameworkProfile />
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -67,6 +68,7 @@
   <ItemGroup>
     <Compile Include="Grabber.cs" />
     <Compile Include="Modules\Chrome.cs" />
+    <Compile Include="Modules\Wifi.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
